sandbox/output
GildedRose.java:10: error: cannot find symbol
            QualityAndSellInCalculator.valueOf(items[i].name).updateQualityAndSellIn(items[i]);
            ^
  symbol:   variable QualityAndSellInCalculator
  location: class GildedRose
1 error
Error: Could not find or load main class TexttestFixture
